--- a/sausage-store-chart/values.yaml
+++ b/sausage-store-chart/values.yaml
@@ -76,3 +76,10 @@ infra:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: rootpassword
     containerPort: 27017
+  postgresql:
+    env:
+      POSTGRESQL_INITDB_ROOT_USERNAME: store
+      POSTGRESQL_INITDB_ROOT_PASSWORD: storepassword
+      POSTGRESQL_INITDB_ROOT_DB: sausage-store
+    containerPort: 5432
+
