--- a/sausage-store-chart/charts/frontend/templates/ingress.yaml
+++ b/sausage-store-chart/charts/frontend/templates/ingress.yaml
@@ -29,4 +29,4 @@ spec:
               service:
                 name: {{ .Release.Name }}-{{ .Chart.Name }}-service
                 port:
-                  number: {{ .Values.frontend.containerPort }}
+                  number: {{ .Values.service.port }}
