--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,6 +29,11 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: debug tree
+        run: |
+          pwd
+          ls -R .
+
       - name: Push Backend to DockerHub
         uses: docker/build-push-action@v4
         with:
