--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,49 +13,49 @@ env:
   KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
 
 jobs:
-  build_and_push_to_docker_hub:
-    name: Push Docker image to DockerHub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
+  # build_and_push_to_docker_hub:
+  #   name: Push Docker image to DockerHub
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out the repo
+  #       uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v2
 
-      - name: Login to Docker
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Login to Docker
+  #       uses: docker/login-action@v2
+  #       with:
+  #         username: ${{ secrets.DOCKER_USER }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: debug tree
-        run: |
-          pwd
-          ls -R .
+  #     - name: debug tree
+  #       run: |
+  #         pwd
+  #         ls -R .
 
-      - name: Push Backend to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./backend/
-          push: true
-          tags: ${{ secrets.DOCKER_USER }}/sausage-backend:latest
-          build-args: |
-            VERSION=${{ github.sha }}
+  #     - name: Push Backend to DockerHub
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: ./backend/
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USER }}/sausage-backend:latest
+  #         build-args: |
+  #           VERSION=${{ github.sha }}
 
-      - name: Push Frontend to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./frontend/
-          push: true
-          tags: ${{ secrets.DOCKER_USER }}/sausage-frontend:latest
+  #     - name: Push Frontend to DockerHub
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: ./frontend/
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USER }}/sausage-frontend:latest
 
-      - name: Push Backend-report to DockerHub
-        uses: docker/build-push-action@v4
-        with:
-          context: ./backend-report/
-          push: true
-          tags: ${{ secrets.DOCKER_USER }}/sausage-backend-report:latest
+  #     - name: Push Backend-report to DockerHub
+  #       uses: docker/build-push-action@v4
+  #       with:
+  #         context: ./backend-report/
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USER }}/sausage-backend-report:latest
 
   add_helm_chart_to_nexus:
     name: Add Helm Chart To Nexus
@@ -139,5 +139,5 @@ jobs:
             --set frontend.image="${{ secrets.DOCKER_USER }}/sausage-frontend:latest" \
             --set backendReport.image="${{ secrets.DOCKER_USER }}/sausage-backend-report:latest" \
             --set frontend.ingress.enabled=true \
-            --set frontend.ingress.host="front-Vulkii.2sem.students-projects.ru" \
+            --set frontend.ingress.host="front-vulkii.2sem.students-projects.ru" \
             --set frontend.ingress.tlsSecret="2sem-students-projects-wildcard-secret"
