--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,11 +29,6 @@ jobs:
   #         username: ${{ secrets.DOCKER_USER }}
   #         password: ${{ secrets.DOCKER_PASSWORD }}
 
-  #     - name: debug tree
-  #       run: |
-  #         pwd
-  #         ls -R .
-
   #     - name: Push Backend to DockerHub
   #       uses: docker/build-push-action@v4
   #       with:
@@ -58,6 +53,7 @@ jobs:
   #         tags: ${{ secrets.DOCKER_USER }}/sausage-backend-report:latest
 
   add_helm_chart_to_nexus:
+    runs-on: ubuntu-latest
     name: Add Helm Chart To Nexus
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
